Updated buildkite docker-compose to remove stickiness mentions

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,5 @@
 steps:
-  - label: ":java: Unit test with test services"
+  - label: ":java: Unit test with in-memory test services"
     agents:
       queue: "default"
       docker: "*"
@@ -9,23 +9,13 @@ steps:
           run: unit-test-test-service
           config: docker/buildkite/docker-compose.yaml
 
-  - label: ":java: Unit test with docker services sticky on"
+  - label: ":java: Unit test with docker services"
     agents:
       queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
     plugins:
       - docker-compose#v3.0.0:
-          run: unit-test-docker-sticky-on
-          config: docker/buildkite/docker-compose.yaml
-
-  - label: ":java: Unit test with docker services sticky off"
-    agents:
-      queue: "default"
-      docker: "*"
-    command: "./gradlew --no-daemon test"
-    plugins:
-      - docker-compose#v3.0.0:
-          run: unit-test-docker-sticky-off
+          run: unit-test-docker
           config: docker/buildkite/docker-compose.yaml
   - wait
