--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,6 +4,7 @@ steps:
       queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
+    timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.0.0:
           run: unit-test-test-service
@@ -13,6 +14,7 @@ steps:
       queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
+    timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.0.0:
           run: unit-test-docker
