--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,6 @@ dependencies {
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.8.0'
     compile group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '1.17.0'
     compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
-    compile group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
@@ -102,6 +101,7 @@ dependencies {
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+    testCompile group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
