Ugraded grpc version

--- a/build.gradle
+++ b/build.gradle
@@ -93,17 +93,15 @@ dependencies {
     api group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     api group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-    api group: 'com.google.protobuf', name: 'protobuf-java', version: '3.8.0'
-    api group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '1.17.0'
     api group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
-    api group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
     api group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
 
-    implementation 'io.grpc:grpc-netty-shaded:1.28.0'
-    implementation 'io.grpc:grpc-protobuf:1.28.0'
-    implementation 'io.grpc:grpc-stub:1.28.0'
+    implementation 'io.grpc:grpc-netty-shaded:1.29.0'
+    implementation 'io.grpc:grpc-protobuf:1.29.0'
+    implementation 'io.grpc:grpc-stub:1.29.0'
+    implementation group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
