--- a/build.gradle
+++ b/build.gradle
@@ -91,17 +91,15 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.3.4')
 
-    api group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    api group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     api group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
     api group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
     api 'io.grpc:grpc-protobuf:1.29.0'
     api 'io.grpc:grpc-stub:1.29.0'
-    api group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
 
+    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    implementation group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
     implementation 'io.grpc:grpc-netty-shaded:1.29.0'
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
@@ -283,6 +281,16 @@ publishing {
     signing {
         sign publishing.publications.mavenJava
     }
+
+    // Uncomment to test local publishing and comment nexusPublishing
+//    repositories {
+//        maven {
+//            def releasesRepoUrl = "$System.env.HOME/repos/releases"
+//            def snapshotsRepoUrl = "$System.env.HOME/repos/snapshots"
+//            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+//        }
+//    }
+
 }
 
 nexusPublishing {
