--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,14 +9,14 @@ steps:
       - docker-compose#v3.0.0:
           run: unit-test-test-service
           config: docker/buildkite/docker-compose.yaml
-  - label: ":java: Unit test with docker service"
-    agents:
-      queue: "default"
-      docker: "*"
-    command: "./gradlew --no-daemon test"
-    timeout_in_minutes: 15
-    plugins:
-      - docker-compose#v3.0.0:
-          run: unit-test-docker
-          config: docker/buildkite/docker-compose.yaml
+#  - label: ":java: Unit test with docker service"
+#    agents:
+#      queue: "default"
+#      docker: "*"
+#    command: "./gradlew --no-daemon test"
+#    timeout_in_minutes: 15
+#    plugins:
+#      - docker-compose#v3.0.0:
+#          run: unit-test-docker
+#          config: docker/buildkite/docker-compose.yaml
   - wait
