--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
     implementation 'io.grpc:grpc-netty-shaded:1.29.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.12.1'
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
