--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/main/proto"]
 	path = src/main/proto
-	url = git@github.com:temporalio/temporal-proto.git
+	url = https://github.com/temporalio/temporal-proto.git
