--- a/build.gradle
+++ b/build.gradle
@@ -249,7 +249,7 @@ publishing {
                 name = 'Temporal Java SDK'
                 packaging = 'jar'
                 // optionally artifactId can be defined here
-                description 'Temporal Workflow Java SDK'
+                description = 'Temporal Workflow Java SDK'
                 url = 'https://github.com/temporalio/temporal-java-sdk'
 
                 scm {
@@ -302,8 +302,6 @@ nexusPublishing {
         sonatype {
             username = project.hasProperty('ossrhUsername') ? project.property('ossrhUsername') : ''
             password = project.hasProperty('ossrhPassword') ? project.property('ossrhPassword') : ''
-            nexusUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
-            snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots/")
         }
     }
 }
