--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "de.marcphilipp.nexus-publish" version "0.4.0"
+    id 'com.github.ben-manes.versions' version '0.17.0' // gradle dependencyUpdates to learn about new versions
 }
 
 repositories {
@@ -93,18 +94,17 @@ dependencies {
 
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
-    api group: 'io.micrometer', name: 'micrometer-core', version: '1.5.1'
+    api group: 'io.micrometer', name: 'micrometer-core', version: '1.5.2'
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    api 'io.grpc:grpc-protobuf:1.30.1'
-    api 'io.grpc:grpc-stub:1.30.1'
+    api 'io.grpc:grpc-protobuf:1.30.2'
+    api 'io.grpc:grpc-stub:1.30.2'
 
     implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.0.2'
-    implementation 'io.grpc:grpc-netty-shaded:1.30.1'
+    implementation 'io.grpc:grpc-netty-shaded:1.30.2'
     implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.12.2'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.0'
-
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
@@ -140,7 +140,7 @@ protobuf {
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.30.1'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.30.2'
         }
     }
     generateProtoTasks {
