--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/main/proto"]
-	path = src/main/proto
+	path = sdk/src/main/proto/proto
 	url = https://github.com/temporalio/temporal-proto.git
