--- a/grpc/build.gradle
+++ b/grpc/build.gradle
@@ -18,9 +18,16 @@ plugins {
     id 'name.remal.check-updates' version '1.0.211'
 }
 
+repositories {
+    maven {
+        url 'https://plugins.gradle.org/m2/'
+    }
+    mavenCentral()
+}
+
 apply plugin: 'com.github.sherter.google-java-format'
 apply plugin: 'com.google.protobuf'
-//apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
+apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
 apply plugin: 'maven-publish'
 apply plugin: 'de.marcphilipp.nexus-publish'
 apply plugin: 'java'
