sdk compiles against serviceclient

--- a/serviceclient/build.gradle
+++ b/serviceclient/build.gradle
@@ -222,7 +222,7 @@ task sourceJar(type: Jar) {
 }
 
 task registerNamespace(type: JavaExec) {
-    main = 'io.temporal.RegisterTestNamespace'
+    main = 'io.temporal.serviceclient.RegisterTestNamespace'
     classpath = sourceSets.test.runtimeClasspath
 }
 
