--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -19,6 +19,13 @@ plugins {
     id 'name.remal.check-updates' version '1.0.211'
 }
 
+repositories {
+    maven {
+        url 'https://plugins.gradle.org/m2/'
+    }
+    mavenCentral()
+}
+
 apply plugin: 'com.github.sherter.google-java-format'
 apply plugin: 'com.google.protobuf'
 apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
@@ -87,6 +94,7 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.4.0')
 
+    api project(':serviceclient')
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
     api group: 'io.micrometer', name: 'micrometer-core', version: '1.5.4'
