--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -77,13 +77,14 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.4.0')
 
-    api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
-    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     api 'io.grpc:grpc-protobuf:1.32.1'
     api 'io.grpc:grpc-stub:1.32.1'
+    api 'io.grpc:grpc-core:1.32.1'
+    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.13.0'
+    api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
+    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 
     implementation 'io.grpc:grpc-netty-shaded:1.32.1'
-    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.13.0'
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
