--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 
     implementation 'io.grpc:grpc-netty-shaded:1.33.1'
+    if (!JavaVersion.current().isJava8()) {
+        implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    }
 
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
