--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -42,11 +42,14 @@ dependencies {
     api project(':temporal-serviceclient')
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     api group: 'io.micrometer', name: 'micrometer-core', version: '1.6.0'
+    api group: 'io.opentracing', name: 'opentracing-api', version: '0.33.0'
 
     implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.11.3'
+    implementation group: 'io.opentracing', name: 'opentracing-util', version: '0.33.0'
+
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
@@ -54,6 +57,7 @@ dependencies {
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation group: 'io.opentracing', name: 'opentracing-mock', version: '0.33.0'
 }
 
 configurations.all {
