Add a gradle task that cleans all sub-projects

--- a/build.gradle
+++ b/build.gradle
@@ -74,3 +74,14 @@ subprojects {
     }
 }
 //logging.captureStandardOutput LogLevel.INFO
+
+task clean {
+    subprojects.each {
+        it.afterEvaluate {
+            def cleanTask = it.tasks.findByName('clean')
+            if (cleanTask) {
+                dependsOn(cleanTask)
+            }
+        }
+    }
+}
